--- a/src/common/view/templates/footer.pug
+++ b/src/common/view/templates/footer.pug
@@ -69,6 +69,7 @@ footer.bg-secondary.py-5
           i.fab.fa-facebook-square.mr-3(onclick="window.open('https://www.facebook.com/petzmaniatx/')")
           i.fab.fa-instagram.mr-3(onclick="window.open('https://www.instagram.com/petz_mania_llc/')")
           i.fab.fa-yelp(onclick="window.open('https://www.yelp.com/biz/petz-mania-dallas')")
+          i.fab.fa-github(onclick="window.open('https://github.com/saandre15/petz-mania-llc')")
     p.my-5.small
       | Copyright &copy; 
       span#date
